trunk/Archive/e62715f09bbd7301f9c9cbcc5306c6f0-ce759ceac3a1c87b565ff35b2f7d6b5c/output
+ g++ -std=c++11 -Wall -Wextra -pedantic main.cpp
main.cpp: In function ‘int main()’:
main.cpp:4:15: error: invalid use of void expression
     f((void)&f);
               ^
